# course_work_6

./: pyproject.toml  services.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_remove_blog_number_of_views_and_more.py
blog/templates/blog/: base.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
messaging/: admin.py  apps.py  forms.py  models.py  receivers.py  scheduler.py  services.py  urls.py  views.py
messaging/management/commands/: run.py  send_mail.py  start_print.py
messaging/migrations/: 0001_initial.py  0002_client_owner_mailing_owner.py  0003_remove_client_owner_remove_mailing_owner.py  0004_start_client_owner_mailing_owner.py  0005_remove_attempt_mailing_delete_contacts_and_more.py  0006_attempt.py  0007_alter_message_options.py  0008_alter_mailing_periodicity.py
messaging/templates/messaging/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_status.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  start_list.html
messaging/templatetags/: my_tags.py
static/css/: bootstrap.min.css
static/js/: bootstrap.bundle.min.js
users/: forms.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: user_form.html  user_list.html  user_password_reset.html  (+1 more)
(+1 files in other folders)
